--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -4,7 +4,7 @@ $red: #db4444;
 $mediumWhite: #fafafa;
 $grey: #7d8184;
 $black: #000000;
-$mediumGrey: #f5f5f5;
+$mediumGray: #f5f5f5;
 $lightYelow: #fefaf1;
 $green: #00ff66;
 $mediumRed: #e07575;
@@ -15,7 +15,8 @@ $trs: 0.3s;
 
 $tabletL: 1024px;
 $tabletM: 820px;
-$mobileM:578px;
+$mobileL: 768px;
+$mobileM: 578px;
 
 @font-face {
   font-family: "poppins";
@@ -81,7 +82,7 @@ body {
     min-height: 48px;
     justify-content: flex-end;
     align-items: center;
-    gap: 230px;
+    gap: 231px;
 
     .top__header__text {
       p {
@@ -91,7 +92,7 @@ body {
         a {
           margin-left: 8px;
           color: $mediumWhite;
-          font-weight: 700;
+          font-weight: 600;
         }
       }
     }
@@ -131,33 +132,34 @@ body {
 
 nav {
   border-bottom: 0.5px solid #0000004d;
+
   .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    min-height: 94px;
     margin-top: 40px;
     margin-bottom: 16px;
 
     .nav__logo {
-      a {
-        color: $black;
-        text-decoration: none;
-        font-size: 24px;
-        font-family: "inter-bold";
-        svg {
+      h2 {
+        a {
+          color: $black;
+          text-decoration: none;
+          font-size: 24px;
+          font-family: "inter-bold";
         }
       }
     }
+
     .nav__menu {
       display: flex;
       gap: 48px;
+
       .nav__menu__item {
         a {
           position: relative;
           text-decoration: none;
           color: $black;
-          font-weight: 400;
           font-size: 16px;
 
           &::before {
@@ -170,6 +172,7 @@ nav {
             bottom: -5px;
             transition: $trs;
           }
+
           &:hover {
             &::before {
               width: 100%;
@@ -178,18 +181,21 @@ nav {
         }
       }
 
-      @media screen and (max-width:$tabletL){
-        gap:16px;
+      form {
+        display: none;
       }
     }
+
     .nav__icons {
       display: flex;
       align-items: center;
       gap: 24px;
+
       form {
         position: relative;
+
         input {
-          background: $mediumGrey;
+          background: $mediumGray;
           border-radius: $br;
           padding: 7px 45px 7px 20px;
           border: none;
@@ -197,30 +203,35 @@ nav {
           width: 243px;
           height: 38px;
           font-size: 14px;
+          color: #00000080;
+
           &::placeholder {
             font-size: 12px;
             color: #00000080;
           }
         }
+
         button {
           position: absolute;
-          top:9px;
           right: 12px;
+          top: 8px;
           border: none;
           background: none;
           cursor: pointer;
-          svg {
-          }
         }
       }
+
       .nav__icons__end {
         display: flex;
+        justify-content: end;
         align-items: center;
         gap: 16px;
+
         .to__wish__list__btn,
         .to__basket__btn {
           a {
             display: block;
+
             svg {
               display: block;
               width: 100%;
@@ -228,29 +239,249 @@ nav {
             }
           }
         }
-      }
-      @media screen and (max-width:$mobileM){
-        flex-wrap: wrap;
-        justify-content: center;
-    }
 
-    }
-    .nav__mobile__menu{
-        display: none;
-    }
+        .burger__menu {
+          display: none;
+          flex-direction: column;
+          justify-content: space-between;
+          align-content: space-between;
+          width: 30px;
+          height: 20px;
 
-    @media screen and (max-width:$tabletM){
-        .nav__menu{
-            display: none;
-        }
-        .nav__mobile__menu{
+          span {
             display: block;
-        } 
-        justify-content: center;
+            background: $black;
+            width: 100%;
+            height: 2px;
+            border-radius: $br;
+            transition: 0.3s;
+          }
+
+          &.active {
+            span:nth-child(1) {
+              transform: rotate(-45deg) translate(-8px, 6px);
+            }
+
+            span:nth-child(2) {
+              display: none;
+            }
+
+            span:nth-child(3) {
+              transform: rotate(45deg) translate(-10px, -9px);
+            }
+          }
+        }
+      }
     }
 
-    @media screen and (max-width:$mobileM){
-        flex-wrap: wrap;
+    @media screen and (max-width: $tabletL) {
+      .nav__menu {
+        gap: 24px;
+      }
+
+      .nav__icons {
+        form {
+          input {
+            width: 200px;
+            padding: 7px 45px 7px 10px;
+          }
+        }
+      }
+    }
+
+    @media screen and (max-width: $tabletM) {
+      .nav__icons {
+        form {
+          input {
+            width: 150px;
+            padding: 7px 45px 7px 10px;
+          }
+        }
+      }
+    }
+
+    @media screen and (max-width: $mobileL) {
+      margin-top: 8px;
+      margin-bottom: 8px;
+      position: relative;
+
+      .nav__icons {
+        form {
+          display: none;
+        }
+
+        .nav__icons__end {
+          .burger__menu {
+            display: flex;
+            cursor: pointer;
+          }
+        }
+      }
+
+      .nav__menu {
+        display: none;
+        position: absolute;
+        flex-direction: column;
+        background: #fff;
+        width: 100%;
+        left: 0;
+        top: 85px;
+        gap: 0px;
+
+        .nav__menu__item {
+          border-bottom: 0.5px solid #eee;
+
+          a {
+            display: block;
+            padding: 32px;
+            transition: $trs;
+
+            &::before {
+              display: none;
+            }
+
+            &:hover {
+              background: #eee;
+            }
+          }
+
+          &:nth-child(4) {
+            border-bottom: none;
+          }
+        }
+
+        form {
+          display: flex;
+          padding: 16px 32px;
+
+          input {
+            background: $mediumGray;
+            border-radius: $br 0px 0px $br;
+            padding: 7px 45px 7px 20px;
+            border: none;
+            outline: 0;
+            width: 100%;
+            height: 38px;
+            font-size: 14px;
+            color: #00000080;
+
+            &::placeholder {
+              font-size: 12px;
+              color: #00000080;
+            }
+          }
+
+          button {
+            background: $mediumGray;
+            border-radius: 0px $br $br 0px;
+            border: none;
+            outline: 0;
+            font-size: 14px;
+            cursor: pointer;
+          }
+        }
+      }
+    }
+  }
+}
+
+header {
+  margin-top: 40px;
+
+  .container {
+    display: flex;
+    gap: 64px;
+
+    .header__menu {
+      position: relative;
+
+      .header__menu__item {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 16px;
+        width: 217px;
+        height: 24px;
+
+        a {
+          font-size: 16px;
+          color: $black;
+          text-decoration: none;
+          white-space: nowrap;
+          width: 100%;
+          line-height: 24px;
+        }
+
+        .header__menu__item__open {
+          cursor: pointer;
+        }
+
+        &:last-child {
+          margin-bottom: 0px;
+        }
+      }
+
+      &::after {
+        content: "";
+        width: 0.5px;
+        height: calc(100% + 40px);
+        position: absolute;
+        background: $black;
+        top: -40px;
+        right: -16px;
+        opacity: 0.3;
+      }
+    }
+    .header__slider {
+      width: 892px;
+      height: 344px;
+      img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+    @media screen and (max-width: 1150px) {
+      gap: 16px;
+
+      .header__slider {
+        img {
+          width: 100%;
+          height: auto;
+        }
+      }
+    }
+
+    @media screen and (max-width: $tabletL) {
+      .header__menu {
+        .header__menu__item {
+          margin: 0;
+          padding: 0;
+
+          a {
+            display: block;
+            font-size: 14px;
+          }
+        }
+      }
+    }
+
+    @media screen and (max-width: $tabletM) {
+      flex-wrap: wrap;
+
+      .header__menu {
+        display: flex;
+        gap: 8px;
+        margin: 0;
+        overflow-y: hidden;
+        overflow-x: auto;
+        cursor: pointer;
+        width: 100%;
+      }
+
+      .header__slider {
+        height: auto;
+      }
     }
   }
 }
