--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -321,9 +321,9 @@ header .container .header__menu {
 header .container .header__menu .header__menu__item {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 16px;
   width: 217px;
   height: 24px;
+  margin-bottom: 16px;
 }
 header .container .header__menu .header__menu__item a {
   font-size: 16px;
@@ -335,6 +335,7 @@ header .container .header__menu .header__menu__item a {
 }
 header .container .header__menu .header__menu__item .header__menu__item__open {
   cursor: pointer;
+  transition: transform 0.3s;
 }
 header .container .header__menu .header__menu__item:last-child {
   margin-bottom: 0px;
@@ -346,37 +347,124 @@ header .container .header__menu::after {
   position: absolute;
   background: #000000;
   top: -40px;
-  right: -16px;
+  right: 0px;
   opacity: 0.3;
 }
 header .container .header__slider {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
   width: 892px;
-  height: 344px;
+  background: #000;
+  padding: 32px;
 }
-header .container .header__slider img {
+header .container .header__slider .header__slider__content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+}
+header .container .header__slider .header__slider__content .header__slider__left {
+  flex-basis: 294px;
+  white-space: nowrap;
+}
+header .container .header__slider .header__slider__content .header__slider__left .header__slider__brand {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+header .container .header__slider .header__slider__content .header__slider__left .header__slider__brand img {
+  display: block;
+  margin: 0;
+}
+header .container .header__slider .header__slider__content .header__slider__left .header__slider__brand span {
+  font-size: min(16px, max(8px + 2vw));
+  text-align: center;
+  color: #fafafa;
+}
+header .container .header__slider .header__slider__content .header__slider__left .header__slider__title h4 {
+  font-family: "inter-bold";
+  font-size: min(48px, max(24px + 2vw));
+  letter-spacing: 2px;
+  color: #fafafa;
+  margin: 24px 0px;
+}
+header .container .header__slider .header__slider__content .header__slider__left .header__slider__btn a {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  font-size: min(16px, max(8px + 2vw));
+  text-decoration: none;
+  color: #fafafa;
+}
+header .container .header__slider .header__slider__content .header__slider__left .header__slider__btn a span {
+  border-bottom: 1px solid #fafafa;
+  padding-bottom: 4px;
+}
+header .container .header__slider .header__slider__content .header__slider__right {
+  flex-basis: 400px;
+}
+header .container .header__slider .header__slider__content .header__slider__right img {
   display: block;
   width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
 }
-@media screen and (max-width: 1150px) {
-  header .container {
-    gap: 16px;
+@media screen and (max-width: 768px) {
+  header .container .header__slider .header__slider__content {
+    flex-wrap: wrap;
   }
-  header .container .header__slider img {
-    width: 100%;
-    height: auto;
+  header .container .header__slider .header__slider__content .header__slider__left {
+    flex-basis: unset;
+    text-align: center;
+  }
+  header .container .header__slider .header__slider__content .header__slider__left .header__slider__brand,
+  header .container .header__slider .header__slider__content .header__slider__left .header__slider__btn a {
+    justify-content: center;
+  }
+  header .container .header__slider .header__slider__content .header__slider__right {
+    flex-basis: unset;
+  }
+}
+header .container .header__slider .header__slider__dots {
+  display: flex;
+  justify-content: center;
+  gap: 12px;
+}
+header .container .header__slider .header__slider__dots .dot {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background: #fff;
+  opacity: 0.5;
+  cursor: pointer;
+}
+header .container .header__slider .header__slider__dots .dot.active__dot {
+  background: #db4444;
+  opacity: 1;
+  border: 2px solid #fff;
+}
+@media screen and (max-width: 578px) {
+  header .container .header__slider {
+    padding: 24px;
+  }
+}
+@media screen and (max-width: 380px) {
+  header .container .header__slider {
+    padding: 12px;
+  }
+}
+@media screen and (max-width: 1100px) {
+  header .container {
+    gap: 32px;
+  }
+  header .container .header__menu .header__menu__item {
+    width: 180px;
   }
 }
 @media screen and (max-width: 1024px) {
-  header .container .header__menu .header__menu__item {
-    margin: 0;
-    padding: 0;
-  }
-  header .container .header__menu .header__menu__item a {
-    display: block;
-    font-size: 14px;
+  header .container {
+    gap: 16px;
   }
 }
 @media screen and (max-width: 820px) {
@@ -385,16 +473,398 @@ header .container .header__slider img {
   }
   header .container .header__menu {
     display: flex;
-    gap: 8px;
-    margin: 0;
     overflow-y: hidden;
     overflow-x: auto;
-    cursor: pointer;
-    width: 100%;
+    gap: 32px;
+    scroll-snap-type: x mandatory;
   }
-  header .container .header__slider {
-    height: auto;
+  header .container .header__menu::after {
+    display: none;
   }
+  header .container .header__menu .header__menu__item {
+    width: unset;
+  }
+  header .container .header__menu .header__menu__item a {
+    width: unset;
+  }
+  header .container ::-webkit-scrollbar {
+    width: 10px;
+    height: 6px;
+    border-radius: 32px;
+  }
+  header .container ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 32px;
+  }
+  header .container ::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 32px;
+  }
+  header .container ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+}
+@media screen and (max-width: 578px) {
+  header .container .header__menu .header__menu__item a {
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 380px) {
+  header .container .header__menu .header__menu__item a {
+    font-size: 12px;
+  }
+}
+
+main {
+  margin-top: 140px;
+}
+main .today__block .today__block__top {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+main .today__block .today__block__top .rect {
+  width: 20px;
+  height: 40px;
+  background: #db4444;
+  border-radius: 4px;
+}
+main .today__block .today__block__top h4 {
+  font-size: 16px;
+  font-family: "poppins";
+  font-weight: 600;
+  color: #db4444;
+}
+main .today__block .today__block__header {
+  display: flex;
+  align-items: center;
+  gap: 87px;
+}
+main .today__block .today__block__header h2 {
+  font-family: "inter-medium";
+  font-weight: 600;
+  font-size: min(36px, max(18px + 2vw));
+  color: #000000;
+}
+main .today__block .today__block__header .today__block__time .first__line {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 52px;
+}
+main .today__block .today__block__header .today__block__time .first__line .first__line__item span {
+  width: 31px;
+  height: 18px;
+  font-family: "poppins";
+  font-weight: 500;
+  font-size: 12px;
+  color: #000000;
+}
+main .today__block .today__block__header .today__block__time .second__line {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 17px;
+}
+main .today__block .today__block__header .today__block__time .second__line .second__line__item {
+  font-family: "inter-bold";
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 30px;
+}
+main .today__block .today__block__header .today__block__icon {
+  display: flex;
+  gap: 8px;
+  margin-left: 319px;
+  align-items: center;
+}
+main .today__block .today__block__content {
+  margin-top: 40px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 30px;
+}
+main .today__block .today__block__content .today__block__items .today__block__item {
+  width: 270px;
+  height: 250px;
+  background: #f5f5f5;
+  border-radius: 4px;
+  position: relative;
+}
+main .today__block .today__block__content .today__block__items .today__block__item .item__1 {
+  position: absolute;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 4px 12px;
+  gap: 10px;
+  background: #db4444;
+  border-radius: 4px;
+  top: 12px;
+  left: 12px;
+}
+main .today__block .today__block__content .today__block__items .today__block__item .svg__1 {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+}
+main .today__block .today__block__content .today__block__items .today__block__item .svg__2 {
+  position: absolute;
+  top: 54px;
+  right: 12px;
+}
+main .today__block .today__block__content .today__block__items .today__block__item .today__img1 {
+  position: absolute;
+  top: 35px;
+  left: 40px;
+}
+main .today__block .today__block__content .today__block__items h4 {
+  margin-top: 16px;
+  margin-bottom: 8px;
+  font-family: "poppins";
+  font-weight: 500;
+  font-size: 16px;
+  color: #000000;
+}
+main .today__block .today__block__content .today__block__items .span {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 12px;
+  width: 85px;
+  height: 24px;
+  order: 1;
+}
+main .today__block .today__block__content .today__block__items .span span {
+  font-family: "poppins";
+  font-weight: 500;
+  font-size: 16px;
+}
+main .today__block .today__block__content .today__block__items .span span:nth-child(1) {
+  color: #db4444;
+}
+main .today__block .today__block__content .today__block__items .span span:nth-child(2) {
+  color: #000000;
+}
+main .today__block .today__block__content .today__block__items .today__block__stars {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 8px;
+}
+main .today__block .today__block__content .today__block__items .today__block__stars span {
+  font-family: "poppins";
+  font-weight: 600;
+  font-size: 14px;
+  color: #000000;
+}
+main .today__block .today__block__footer {
+  margin-top: 60px;
+  margin-bottom: 60px;
+  display: flex;
+  justify-content: center;
+}
+main .today__block .today__block__footer a {
+  display: inline-block;
+  padding: 16px 48px;
+  background: #db4444;
+  border-radius: 4px;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 16px;
+  font-family: "poppins";
+  color: #fafafa;
+}
+main .today__block .footer__line {
+  width: 1170px;
+  opacity: 0.3;
+  border: 0.5px solid #000000;
+  transform: rotate(180deg);
+}
+main .categories__block {
+  margin-top: 80px;
+}
+main .categories__block .categories__block__top {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+main .categories__block .categories__block__top .rect {
+  width: 20px;
+  height: 40px;
+  background: #db4444;
+  border-radius: 4px;
+}
+main .categories__block .categories__block__top h4 {
+  font-size: 16px;
+  font-family: "poppins";
+  font-weight: 600;
+  color: #db4444;
+}
+main .categories__block .categories__block__header {
+  width: 1170px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+main .categories__block .categories__block__header h2 {
+  font-family: "inter-medium";
+  font-weight: 600;
+  font-size: min(36px, max(18px + 2vw));
+  color: #000000;
+}
+main .categories__block .categories__block__header .categories__block__icon {
+  display: flex;
+  gap: 8px;
+  margin-left: 319px;
+  align-items: center;
+}
+main .categories__block .categories__block__content {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 30px;
+}
+main .categories__block .categories__block__content .categories__block__items:nth-child(4) {
+  background: #db4444;
+  border-radius: 4px;
+}
+main .categories__block .categories__block__content .categories__block__items .categories__block__item {
+  position: relative;
+  width: 170px;
+  height: 145px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-radius: 4px;
+}
+main .categories__block .categories__block__content .categories__block__items .categories__block__item div {
+  position: absolute;
+  top: 25px;
+  left: 57px;
+}
+main .categories__block .categories__block__content .categories__block__items .categories__block__item p {
+  position: absolute;
+  top: 97px;
+  left: 55px;
+}
+main .thismonth__block {
+  margin-top: 70px;
+}
+main .thismonth__block .thismonth__block__top {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+main .thismonth__block .thismonth__block__top .rect {
+  width: 20px;
+  height: 40px;
+  background: #db4444;
+  border-radius: 4px;
+}
+main .thismonth__block .thismonth__block__top h4 {
+  font-size: 16px;
+  font-family: "poppins";
+  font-weight: 600;
+  color: #db4444;
+}
+main .thismonth__block .thismonth__block__header {
+  width: 1170px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+main .thismonth__block .thismonth__block__header h2 {
+  font-family: "inter-medium";
+  font-weight: 600;
+  font-size: min(36px, max(18px + 2vw));
+  color: #000000;
+}
+main .thismonth__block .thismonth__block__header a {
+  display: inline-block;
+  padding: 16px 48px;
+  background: #db4444;
+  text-decoration: none;
+  color: #fafafa;
+  font-weight: 500;
+  font-size: 16px;
+  border-radius: 4px;
+}
+main .thismonth__block .thismonth__block__content {
+  margin-top: 40px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 30px;
+}
+main .thismonth__block .thismonth__block__content .thismonth__block__items .thismonth__block__item {
+  width: 270px;
+  height: 250px;
+  background: #f5f5f5;
+  border-radius: 4px;
+  position: relative;
+}
+main .thismonth__block .thismonth__block__content .thismonth__block__items .thismonth__block__item .svg__1 {
+  position: absolute;
+  top: 12px;
+  right: 12px;
+}
+main .thismonth__block .thismonth__block__content .thismonth__block__items .thismonth__block__item .svg__2 {
+  position: absolute;
+  top: 54px;
+  right: 12px;
+}
+main .thismonth__block .thismonth__block__content .thismonth__block__items .thismonth__block__item .thismonth__img1 {
+  position: absolute;
+  top: 35px;
+  left: 40px;
+}
+main .thismonth__block .thismonth__block__content .thismonth__block__items h4 {
+  margin-top: 16px;
+  margin-bottom: 8px;
+  font-family: "poppins";
+  font-weight: 500;
+  font-size: 16px;
+  color: #000000;
+}
+main .thismonth__block .thismonth__block__content .thismonth__block__items .span {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 12px;
+  width: 85px;
+  height: 24px;
+  order: 1;
+}
+main .thismonth__block .thismonth__block__content .thismonth__block__items .span span {
+  font-family: "poppins";
+  font-weight: 500;
+  font-size: 16px;
+}
+main .thismonth__block .thismonth__block__content .thismonth__block__items .span span:nth-child(1) {
+  color: #db4444;
+}
+main .thismonth__block .thismonth__block__content .thismonth__block__items .span span:nth-child(2) {
+  color: #000000;
+}
+main .thismonth__block .thismonth__block__content .thismonth__block__items .thismonth__block__stars {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 0px;
+  gap: 8px;
+}
+main .thismonth__block .thismonth__block__content .thismonth__block__items .thismonth__block__stars span {
+  font-family: "poppins";
+  font-weight: 600;
+  font-size: 14px;
+  color: #000000;
 }
 
 * {
